add dto validation to make all fields non-optional
