# openapi-v3.yaml
@@ -45,7 +45,7 @@ paths:
     get:
       tags:
       - poll-controller
-      summary: Visszaküldi az összess poll objektumot
+      summary: Visszaküldi az összes poll objektumot
       operationId: getPolls
       responses:
         "400":
@@ -57,8 +57,8 @@ paths:
                 additionalProperties:
                   type: string
         "200":
-          description: "Visszaküldi az összess poll objektumot. Nem dob kivételt.\
-            \ Ha az adatbázis üres, akkor egy üres array-el tér vissza."
+          description: "Visszaküldi az összes poll objektumot. Nem dob kivételt. Ha\
+            \ az adatbázis üres, akkor egy üres array-el tér vissza."
           content:
             application/json:
               schema:
@@ -143,18 +143,18 @@ paths:
                 type: object
                 additionalProperties:
                   type: string
-        "404":
-          description: Ha a vote objektum nem található.
-          content:
-            application/json:
-              schema:
-                type: string
         "200":
           description: "Visszaadja a vote objektumot az adatbázisból, ha létezik."
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/VoteOutput'
+        "404":
+          description: Ha a vote objektum nem található.
+          content:
+            application/json:
+              schema:
+                type: string
     delete:
       tags:
       - vote-controller
@@ -204,18 +204,18 @@ paths:
                 type: object
                 additionalProperties:
                   type: string
-        "200":
-          description: "Visszaadja a poll objektumot az adatbázisból, ha létezik."
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PollOutput'
         "404":
           description: Ha az poll objektum nem található.
           content:
             application/json:
               schema:
                 type: string
+        "200":
+          description: "Visszaadja a poll objektumot az adatbázisból, ha létezik."
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PollOutput'
     delete:
       tags:
       - poll-controller
@@ -265,18 +265,18 @@ paths:
                 type: object
                 additionalProperties:
                   type: string
-        "200":
-          description: "Visszaadja az option objektumot az adatbázisból, ha létezik."
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/OptionOutput'
         "404":
           description: Ha az option objektum nem található.
           content:
             application/json:
               schema:
                 type: string
+        "200":
+          description: "Visszaadja az option objektumot az adatbázisból, ha létezik."
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OptionOutput'
     delete:
       tags:
       - option-controller
@@ -311,6 +311,7 @@ components:
       required:
       - option
       - poll
+      - voteId
       type: object
       properties:
         voteId:
@@ -323,6 +324,13 @@ components:
           pattern: "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
           type: string
     OptionOutput:
+      required:
+      - description
+      - optionId
+      - poll
+      - price
+      - title
+      - votes
       type: object
       properties:
         optionId:
@@ -345,6 +353,7 @@ components:
       - description
       - multipleChoice
       - options
+      - pollId
       - title
       - votes
       type: object
@@ -369,6 +378,13 @@ components:
             pattern: "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
             type: string
     PollOutput:
+      required:
+      - description
+      - multipleChoice
+      - options
+      - pollId
+      - title
+      - votes
       type: object
       properties:
         pollId:
@@ -390,7 +406,9 @@ components:
     OptionInput:
       required:
       - description
+      - optionId
       - poll
+      - price
       - title
       - votes
       type: object
@@ -414,6 +432,11 @@ components:
             pattern: "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
             type: string
     VoteOutput:
+      required:
+      - option
+      - poll
+      - username
+      - voteId
       type: object
       properties:
         voteId:
